--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ html {
 body {
     margin: 0;
     padding: 0;
+    font-family: Roboto, 'sans-serif';
+    font-size: 20px;
 }
 ul {
     padding: 0;
@@ -14,13 +16,14 @@ a {
     text-decoration: none;
 }
 
-/* Global Page Header*/
+/* Global Page Header */
 
-.globalHeader {
-    font-family: Roboto, 'sans-serif';
+.global-header {
+    position: relative;
+    z-index: 3;
 }
 
-.globalHeader__location {
+.location {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,17 +31,17 @@ a {
     padding: 14px 0;
 }
 
-.globalHeader__location-form {
+.location__form {
     display: inline-flex;
     align-items: center;
     margin-right: 350px;
 }
 
-.globalHeader__location-info-text {
+.location__info-text {
     display: inline-block;
     margin-right: 50px;
 }
-.globalHeader__location-select {
+.location__select {
     font-family: Roboto, 'sans-serif';
     font-size: 16px;
     display: inline-block;
@@ -48,14 +51,14 @@ a {
     border: 1px solid #949494;
     border-radius: 4px;
 }
-.globalHeader__location-label {
+.location__label {
     display: block;
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 20px;
 }
 
-.globalHeader__location-submit {
+.location__submit {
     border: 1px solid #949494;
     font-family: Roboto, 'sans-serif';
     font-size: 20px;
@@ -66,11 +69,11 @@ a {
     transition: background-color .2s;
 }
 
-.globalHeader__location-submit:hover {
+.location__submit:hover {
     background-color: #949494;
 }
 
-.globalHeader__location-close {
+.location__close {
     border: none;
     width: 20px;
     height: 20px;
@@ -83,7 +86,9 @@ a {
 
 /* Header Template */
 
-.header-navbar {
+.header {
+    position: relative;
+    z-index: 3;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -91,36 +96,37 @@ a {
     background: rgba(42, 42, 42, 0.85);
 }
 
-.header-navbar-block {
+.header__block /*.navbar-block*/ {
     display: flex;
     flex-direction: column;
     color: #ffffff;
 }
 
-.header-navbar-links {
+.navbar-block__links {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.header-navbar-links-item {
+.navbar-block__item {
     font-size: 20px;
-    margin-right: 30px;
     text-align: center;
 }
 
-.header-navbar-tag {
-    align-self: flex-end;
+.navbar-block__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.header-navbar__links-item-link {
+.navbar-block__tag {
+    align-self: flex-end;
+    color: #fff;
+}
+
+.navbar-block__link {
     color: #ffffff;
 }
 
-
-
-.header-navbar__links-item-link:hover {
+.navbar-block__link:hover {
     text-decoration: underline;
 }
 
@@ -138,8 +144,103 @@ a {
     height: 0.88em;
     margin: 0 0 0 19px;
     vertical-align: middle;
-    background: url(../imgs/globalHeader/location_header_button_vector.svg) no-repeat 0 0;
+    background: url(../imgs/global-page/global-header/location_header_button_vector.svg) no-repeat 0 0;
     background-size: contain;
 }
 
-/* Button Link end */
+/* Button Link End */
+
+
+
+/* Main Page Cards */
+
+.global-main {
+    position: relative;
+    top: -190px;
+}
+
+.page-cards {
+    display: flex;
+    width: 100%;
+}
+
+.page-cards__item {
+    display: flex;
+    width: 33.3%;
+    text-align: center;
+    height: 880px;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+}
+
+.page-cards__button {
+    color: #ffffff;
+}
+
+.page-cards__title {
+    font-size: 48px;
+    text-transform: uppercase;
+}
+
+.page-cards__button {
+    font-size: 28px;
+}
+
+#business-card {
+    background: url("../imgs/global-page/pages-cards/business-card.png");
+}
+
+#consumer-card {
+    background: url("../imgs/global-page/pages-cards/consumer-card.png");
+}
+
+#about-us-card {
+    background: url("../imgs/global-page/pages-cards/about-us-card.png");
+}
+
+/* Main Page Cards End*/
+
+
+
+/* Main Page Ces */
+
+.ces {
+
+}
+
+.ces__main {
+    background: url("../imgs/global-page/ces/background.png");
+    padding-top: 94px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+}
+
+.ces__main:hover {
+    cursor: pointer;
+    background: linear-gradient(
+            rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)
+    ),
+    url("../imgs/global-page/ces/background.png");
+}
+
+.ces__title-top {
+    font-size: 128px;
+    margin: 0;
+}
+
+.ces__text {
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.ces__mini-description {
+    font-size: 16px;
+}
+/* Main Page Ces End */
+
+
