--- a/css/styles.css
+++ b/css/styles.css
@@ -59,21 +59,6 @@ a {
     font-size: 20px;
 }
 
-.dark-button {
-    border: 1px solid #949494;
-    font-family: Roboto, 'sans-serif';
-    font-size: 20px;
-    padding: 13px 50px;
-    background: #222222;
-    color: #ffffff;
-    cursor: pointer;
-    transition: background-color .2s;
-}
-
-.dark-button:hover {
-    background-color: #949494;
-}
-
 .location__close {
     border: none;
     width: 20px;
@@ -122,10 +107,49 @@ a {
 }
 
 .navbar-block__link {
-    position: relative;
     color: #ffffff;
 }
-.navbar-block__link::before {
+
+
+/* Header Template End */
+
+
+
+/* Buttons And Links */
+
+.dark-button {
+    border: 1px solid #949494;
+    font-family: Roboto, 'sans-serif';
+    font-size: 20px;
+    padding: 13px 50px;
+    background: #222222;
+    color: #ffffff;
+    cursor: pointer;
+    transition: background-color .2s;
+}
+
+.dark-button::after {
+    content: "";
+    font-size: 16px;
+    display: inline-block;
+    width: 0.44em;
+    height: 0.88em;
+    margin: 0 0 0 19px;
+    vertical-align: middle;
+    background: url(../imgs/button_arrow_light.svg) no-repeat 0 0;
+    background-size: contain;
+}
+
+.dark-button:hover {
+    background-color: #949494;
+}
+
+.light-link {
+    position: relative;
+    color: #FFFFFF;
+}
+
+.light-link::before {
     content: "";
     display: block;
     position: absolute;
@@ -137,17 +161,12 @@ a {
     transform: scaleX(0);
     transition: transform .3s ease;
 }
-.navbar-block__link:hover::before {
+
+.light-link:hover::before {
     transform: scaleX(1);
 }
 
-/* Header Template End */
-
-
-
-/* Button Link */
-
-.button-link::after {
+.light-link::after {
     content: "";
     font-size: 16px;
     display: inline-block;
@@ -155,11 +174,45 @@ a {
     height: 0.88em;
     margin: 0 0 0 19px;
     vertical-align: middle;
-    background: url(../imgs/global-page/global-header/location_header_button_vector.svg) no-repeat 0 0;
+    background: url(../imgs/button_arrow_light.svg) no-repeat 0 0;
     background-size: contain;
 }
 
-/* Button Link End */
+.dark-link {
+    position: relative;
+    color: #000000;
+}
+
+.dark-link::before {
+    content: "";
+    display: block;
+    position: absolute;
+    background: #000000;
+    bottom: -2px;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    transform: scaleX(0);
+    transition: transform .3s ease;
+}
+
+.dark-link:hover::before {
+    transform: scaleX(1);
+}
+
+.dark-link::after {
+    content: "";
+    font-size: 16px;
+    display: inline-block;
+    width: 0.44em;
+    height: 0.88em;
+    margin: 0 0 0 19px;
+    vertical-align: middle;
+    background: url(../imgs/button_arrow_dark.svg) no-repeat 0 0;
+    background-size: contain;
+}
+
+/* Buttons And Links End */
 
 
 
@@ -324,10 +377,82 @@ a {
 /* Global Page Vision End */
 
 
-/* TODO */
+
 /* Global Page News */
 
-.news__button::after {
+.news {
+    display: flex;
+    flex-direction: column;
+    background: #ffffff;
+    padding: 120px 370px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.news__header {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+.news-header__body {
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+}
+
+.news-header__title {
+    margin: 0;
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.news__item /* news-item */ {
+    display: flex;
+    position: relative;
+    padding: 25px 0;
+    border-bottom: 1px solid #949494;
+}
+
+.news-item__category {
+    position: absolute;
+    background: #F2F2F2;
+    text-align: center;
+    margin-left: 120px;
+    width: 220px;
+    padding: 3px 0;
+    top: 20px;
+}
+
+.news-item__link {
+    position: absolute;
+    margin-left: 360px;
 }
 
 /* Global Page News End */
+
+
+
+/* Warning Block */
+
+.warning-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 120px 0;
+}
+
+.warning-block__text {
+    display: inline-block;
+    margin: 0;
+}
+
+.warning-block__img {
+    margin-right: 10px;
+}
+
+/* Warning Block End */
