--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,83 +1,262 @@
 html {
-    margin: 0;
-    padding: 0;
-}
-body {
-    margin: 0;
-    padding: 0;
-    font-size: 1.8rem;
-    line-height: 1.4;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-    font-weight: 400;
-    color: #222;
+    /*width: 1920px;*/
 }
 
-.header{
+p, h2, h3, h4 {
+    margin: 0;
+}
+
+.header-about-us {
+    position: absolute;
+    top: 0;
     width: 100%;
-    height: 120px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    background: rgba(42, 42, 42, 0.85);
-}
-.header__logo{
-    width: 80px;
-    height: 80px;
-    margin-left: 250px;
-    background-image: url("/imgs/about_us/logo_1.svg");
-}
-.header__page{
-    font-family: Roboto, sans-serif;
-    font-size: 20px;
-    color: #FFFFFF;
-    margin-left: 30px;
 }
 
-.about-us{
+.about-us {
     display: block;
     width: 100%;
-    height: 100%;
-    min-height: 150px;
-    position: absolute;
-    bottom: 0;
+    height: auto;
+    position: relative;
+    top: 0;
     /*z-index: -1;*/
     /*background: url(/imgs/about_us/about_us_top.svg), lightgray -43px -132.709px / 104.762% 171.162% no-repeat;*/
 }
-.about-us__img{
+
+.about-us__img {
+    width: auto;
+    height: 660px;
+}
+
+.about-us__content {
     position: absolute;
-    z-index: -1;
+    display: inline-block;
+    top: 256px;
+    left: 250px;
 }
-.about-us__content{
-    position: relative;
-    height: 100%;
-    max-width: 1280px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 250px;
-    padding-top: 250px;
-}
-.about-us__title{
-    font: bold 48px "Roboto", sans-serif;
+
+.about-us__title {
+    font: 700 48px "Roboto", sans-serif;
     color: #000;
     margin: 0;
 }
-.about-us__text{
-    font: auto 20px "Roboto", sans-serif;
-    margin-top: 20px;
+
+.about-us__text {
+    font: 400 20px "Roboto", sans-serif;
+    margin-top: 30px;
 }
 
 /*-----featured-----*/
-.featured{
-
+.featured {
+    padding: 120px 200px 70px 200px;
 }
-.featured__title{
-    font-size: 3.3rem;
-    font-weight: 500;
-    line-height: 1.4;
-    color: #000;
+
+.featured__title {
+    margin: 0;
+    font: 700 36px "Roboto", sans-serif;
+    color: #111111;
     text-align: center;
 }
-.featured__item{
+
+.featured__list {
+    margin: 0;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(250px, auto);
+    gap: 50px;
+}
+
+.featured__item {
+    margin: auto;
+    height: 100%;
+}
+
+.company-pickup {
+    background-color: #111111;
+    color: #ffffff;
+    width: min-content;
+    height: inherit;
+}
+
+.company-pickup__media {
+    width: 685px;
+    height: 191px;
+}
+
+.company-pickup__body {
+    display: block;
+    padding: 32px;
+}
+
+.company-pickup__title {
+    font: 500 20px "Roboto", sans-serif;
+    line-height: 23.44px;
+}
+
+.company-pickup__title::after {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    margin-left: 12px;
+    vertical-align: text-top;
+    background: url("/imgs/about_us/icon_angle-right-white.svg") no-repeat 0 0;
+}
+
+.company-pickup__title--c-icon {
+    font: 500 20px "Roboto", sans-serif;
+    line-height: 23.44px;
+}
+
+.company-pickup__title--c-icon::after {
+    content: "";
+    display: inline-block;
+    width: 1.1em;
+    height: 1.1em;
+    margin-left: 12px;
+    vertical-align: baseline;
+    background: url("/imgs/about_us/icon_link-ext-white.svg") no-repeat 0 0;
+}
+
+.company-pickup__text {
+    margin-top: 12px;
+    font: 500 16px "Roboto", sans-serif;
+    line-height: 18.75px;
+
+}
+
+/*-----<featured/>-----*/
+
+/*-----<News>-----*/
+.news {
+    padding: 120px 370px;
+    background-color: #f3f3f3;
+}
+
+.news__title {
+    text-align: center;
+    font: 700 36px "Roboto", sans-serif;
+}
+
+.news__list {
+    display: table;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.news__item {
+    display: table-row;
+    border-bottom: 1px solid #b3b3b3;
+    font: 600 16px "Roboto", sans-serif;
+    line-height: 18.75px;
+    color: #111111;
+}
+
+.news__date {
+    display: table-cell;
+    width: 110px;
+    padding: 16px 14px 16px 0;
+}
+
+.news__category {
+    display: table-cell;
+    vertical-align: top;
+    padding: 16px 16px 16px 0;
+    white-space: nowrap;
+    width: 220px;
+    text-align: center;
+}
+
+.news__link {
+    font: 600 16px "Roboto", sans-serif;
+    line-height: 18.75px;
+    display: table-cell;
+    padding: 16px 0;
+    color: #111111;
+}
+
+.news__link::after {
+    content: "";
+    display: inline-block;
+    margin-left: 10px;
+    width: 1.1em;
+    height: 1.1em;
+    padding: 4px 0;
+    vertical-align: middle;
+    background: url("/imgs/about_us/icon_angle-right.svg") no-repeat 0 0;
+}
+
+.news__file {
+    vertical-align: text-bottom;
+}
+
+
+/*-----<News/>-----*/
+
+/*-----<company-category>-----*/
+
+.company-category {
+    padding: 120px 250px;
+}
+
+.company-category__list {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 0.5fr);
+    grid-template-rows: repeat(2, auto);
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.company-category__item {
+    display: flex;
+}
+
+.company-category__body {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    box-sizing: border-box;
+    z-index: 2;
+}
+
+.company-category__media {
+    transition: opacity 0.2s ease-out;
+    overflow: hidden;
+}
+
+.company-category__title {
+    position: absolute;
+    width: inherit;
+    padding: 32px 0;
+    background-color: rgba(0, 0, 0, 0.65);
+}
+
+.company-category__title-text {
+    padding-left: 32px;
+    font: 500 20px "Roboto", sans-serif;
+    line-height: 23.44px;
+
+}
+
+.company-category__title-text::after {
+    content: "";
+    display: inline-block;
+    width: 1.1em;
+    height: 1.1em;
+    margin-left: 12px;
+    vertical-align: text-top;
+    background: url("/imgs/about_us/icon_angle-right-white.svg") no-repeat 0 0;
+}
+
+/*-----<company-category/>-----*/
+
+/*-----<foundation>-----*/
+.foundation {
     width: auto;
     max-width: 1280px;
     margin-right: auto;
@@ -86,4 +265,185 @@ body {
     padding-right: 80px;
     padding-top: 100px;
     padding-bottom: 100px;
+
 }
+
+.company-foundation {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.foundation__title {
+    color: #111111;
+    text-align: center;
+    line-height: 42.19px;
+    font: 700 36px "Roboto", sans-serif;
+    padding:50px 0;
+}
+
+.company-foundation__text {
+    margin-top: 30px;
+    color: #111111;
+    text-align: left;
+    line-height: 23.44px;
+    font: 400 20px "Roboto", sans-serif;
+}
+
+.company-foundation__link {
+    margin-top: 30px;
+    width: calc((100% - (40px * 2)) / 3);
+    display: inline-block;
+    min-height: 44px;
+    padding: 9px 44px 5px;
+    background-color: #111111;
+    border: 1px solid #949494;
+    box-sizing: border-box;
+    color: #ffffff;
+    transition: background-color 0.2s ease-out;
+}
+
+.company-foundation__text--m120 {
+    margin-top: 120px;
+}
+
+
+.foundation__content {
+}
+
+.foundation__list {
+margin: 0;
+}
+
+.foundation__item {
+}
+
+.foundation-section {
+    display: grid;
+    gap: 50px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.foundation-section__item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.foundation-section__container{
+    min-height: 487px;
+    padding: 20px;
+    box-sizing: border-box;
+    word-break: break-word;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    background-color: #F2F2F2;
+    height: inherit;
+    overflow-wrap: anywhere;
+
+}
+.foundation-section__heading {
+    color: #111111;
+    text-align: center;
+    font: 500 24px "Roboto", sans-serif;
+    line-height: 28.13px;
+    padding: 12px 0;
+}
+
+.foundation-section__body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+
+}
+.foundation-section__body--row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.foundation-section__text--medium-30 {
+    font: 700 26px "Roboto", sans-serif;
+    line-height: 30px;
+    letter-spacing: 0em;
+}
+.foundation-section__text--medium-36 {
+    font: 700 36px "Roboto", sans-serif;
+    line-height: 42.19px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+.foundation-section__text--medium-50 {
+    font: 700 50px "Roboto", sans-serif;
+    line-height: 58.59px;
+    letter-spacing: 0em;
+}
+
+.foundation-section__m-t20 {
+    margin-top: 20px;
+}
+.foundation-section__p-l12 {
+    padding-left: 12px;
+}
+.foundation-section__text--large-80 {
+    font: 700 80px "Roboto", sans-serif;
+    line-height: 94px;
+    letter-spacing: 0em;
+    display: block;
+
+}
+
+.foundation-section__text--large-102 {
+    font: 700 102px "Roboto", sans-serif;
+    line-height: 120px;
+    letter-spacing: 0em;
+}
+
+.foundation-section__text--note {
+    font: 400 18px "Roboto", sans-serif;
+    line-height: 21px;
+    letter-spacing: 0em;
+    display: block;
+}
+
+.foundation-section__note-list {
+    padding-bottom: 12px;
+}
+.foundation-section__link{
+    padding-top: 20px;
+    font: 400 18px "Roboto", sans-serif;
+    line-height: 21.09px;
+    text-align: right;
+    color: #111111;
+    display: block;
+}
+
+.foundation-section__link::after {
+    content: "";
+    display: inline-block;
+    margin-left: 10px;
+    width: 1.1em;
+    height: 1.1em;
+    padding: 4px 0;
+    vertical-align: middle;
+    background: url("/imgs/about_us/icon_angle-right.svg") no-repeat 0 0;
+}
+.foundation-section__link--c-icon::after {
+    content: "";
+    display: inline-block;
+    width: 1.1em;
+    height: 1.1em;
+    margin-left: 12px;
+    vertical-align: middle;
+    background: url("/imgs/about_us/icon_link-ext-black.svg") no-repeat 0 0;
+}
+
+
+/*-----<foundation/>-----*/
