--- a/css/about_us.css
+++ b/css/about_us.css
@@ -2,6 +2,13 @@ html {
     /*width: 1920px;*/
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, 'sans-serif';
+    background: #ffffff;
+}
+
 p, h2, h3, h4 {
     margin: 0;
 }
@@ -23,8 +30,8 @@ p, h2, h3, h4 {
 }
 
 .about-us__img {
-    width: auto;
-    height: 660px;
+    width: 100%;
+    height: auto;
 }
 
 .about-us__content {
@@ -280,7 +287,7 @@ p, h2, h3, h4 {
     text-align: center;
     line-height: 42.19px;
     font: 700 36px "Roboto", sans-serif;
-    padding:50px 0;
+    padding: 50px 0;
 }
 
 .company-foundation__text {
@@ -313,7 +320,7 @@ p, h2, h3, h4 {
 }
 
 .foundation__list {
-margin: 0;
+    margin: 0;
 }
 
 .foundation__item {
@@ -331,7 +338,8 @@ margin: 0;
     display: flex;
     flex-direction: column;
 }
-.foundation-section__container{
+
+.foundation-section__container {
     min-height: 487px;
     padding: 20px;
     box-sizing: border-box;
@@ -345,6 +353,7 @@ margin: 0;
     overflow-wrap: anywhere;
 
 }
+
 .foundation-section__heading {
     color: #111111;
     text-align: center;
@@ -361,6 +370,7 @@ margin: 0;
     box-sizing: border-box;
 
 }
+
 .foundation-section__body--row {
     display: flex;
     flex-direction: row;
@@ -374,12 +384,14 @@ margin: 0;
     line-height: 30px;
     letter-spacing: 0em;
 }
+
 .foundation-section__text--medium-36 {
     font: 700 36px "Roboto", sans-serif;
     line-height: 42.19px;
     letter-spacing: 0em;
     text-align: left;
 }
+
 .foundation-section__text--medium-50 {
     font: 700 50px "Roboto", sans-serif;
     line-height: 58.59px;
@@ -389,9 +401,11 @@ margin: 0;
 .foundation-section__m-t20 {
     margin-top: 20px;
 }
+
 .foundation-section__p-l12 {
     padding-left: 12px;
 }
+
 .foundation-section__text--large-80 {
     font: 700 80px "Roboto", sans-serif;
     line-height: 94px;
@@ -416,7 +430,8 @@ margin: 0;
 .foundation-section__note-list {
     padding-bottom: 12px;
 }
-.foundation-section__link{
+
+.foundation-section__link {
     padding-top: 20px;
     font: 400 18px "Roboto", sans-serif;
     line-height: 21.09px;
@@ -435,6 +450,7 @@ margin: 0;
     vertical-align: middle;
     background: url("/imgs/about_us/icon_angle-right.svg") no-repeat 0 0;
 }
+
 .foundation-section__link--c-icon::after {
     content: "";
     display: inline-block;
