--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 }
 ul {
     padding: 0;
+    margin: 0;
     list-style: none;
 }
 a {
@@ -76,7 +77,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 27px 250px;
+    padding: 20px 250px;
     background: rgba(42, 42, 42, 0.85);
 }
 
@@ -102,8 +103,8 @@ a {
 }
 
 .navbar-block__tag {
+    margin-top: 0;
     align-self: flex-end;
-    color: #ffffff;
 }
 
 .navbar-block__link {
@@ -149,7 +150,7 @@ a {
     color: #FFFFFF;
 }
 
-.light-link::before {
+.light-link-hoverable::before {
     content: "";
     display: block;
     position: absolute;
@@ -162,7 +163,7 @@ a {
     transition: transform .3s ease;
 }
 
-.light-link:hover::before {
+.light-link-hoverable:hover::before {
     transform: scaleX(1);
 }
 
@@ -232,6 +233,13 @@ a {
     align-items: center;
     justify-content: center;
     color: #ffffff;
+    cursor: pointer;
+}
+
+.page-cards__item:hover .page-cards__button {
+    background: rgba(0,0,0,0.7);
+    border: 1px solid #ffffff;
+    padding: 20px 30px;
 }
 
 .page-cards__button {
@@ -239,6 +247,7 @@ a {
 }
 
 .page-cards__title {
+    color: #ffffff;
     font-size: 48px;
     text-transform: uppercase;
 }
@@ -248,11 +257,9 @@ a {
     transition: all .3s;
 }
 
-.page-cards__button:hover {
-    background: rgba(0,0,0,0.7);
-    border: 1px solid #ffffff;
-    padding: 20px 30px;
-}
+/*.page-cards__button:hover {*/
+
+/*}*/
 
 #business-card {
     background: url("../imgs/global-page/pages-cards/business-card.png");
@@ -390,6 +397,7 @@ a {
 }
 
 .news__header {
+    position: relative;
     display: flex;
     width: 100%;
     align-items: center;
@@ -397,14 +405,14 @@ a {
     margin: 20px 0;
 }
 
-.news-header__body {
-    display: flex;
-    width: 50%;
-    justify-content: space-between;
+.news-header__rss-link {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .news-header__title {
-    margin: 0;
+    margin: 0 auto;
     font-size: 36px;
     font-weight: 700;
 }
