--- a/css/styles.css
+++ b/css/styles.css
@@ -495,8 +495,7 @@ a {
 .warning-block {
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: 16px;
+    align-items: center;    font-size: 16px;
     font-weight: 600;
     padding: 120px 0;
 }
